--- a/src/components/UserList/userList.scss
+++ b/src/components/UserList/userList.scss
@@ -2,6 +2,7 @@ $greenColor:#4cad5b;
 $lightBlueColor:#e3eeff;
 $blueColor:#1979ff;
 $lightGreenColor:#ebfaf3;
+$grayColor:#dddddd;
 .user-list{
     .user-container{
         display: flex;
@@ -36,15 +37,20 @@ span{
         height: 100%;
         border-radius: 5px;
     }
-    .online-sign{
+    .status{
         position: absolute;
         right: -6px;
         bottom: -2px;
         border: 2px solid #fff;
-        background-color: #4cad5b;
         width: 15px;
         height: 15px;
         border-radius: 100%;
+    }
+    .online{
+        background-color:$greenColor;
+    }
+    .offline{
+        background-color: $grayColor;  
     }
         }
         }
