--- a/src/components/UserList/userList.scss
+++ b/src/components/UserList/userList.scss
@@ -66,6 +66,7 @@ span{
     text-align: center;
     border-radius: 23px;
     border: none;
+    cursor: pointer;
 }
 .btn-add{
     @extend .button;
