--- a/src/components/SelectedMembers/selectedMember.css
+++ b/src/components/SelectedMembers/selectedMember.css
@@ -1,3 +1,13 @@
+.no-item {
+  background-color: #f5f5f5;
+  color: #ddd;
+  height: 50px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .selected-container {
   display: flex;
   flex-wrap: wrap;
