--- a/src/components/SelectedMembers/selectedMember.scss
+++ b/src/components/SelectedMembers/selectedMember.scss
@@ -1,53 +1,59 @@
-$greenColor:#4cad5b;
-$blueColor:#1979ff;
+$greenColor: #4cad5b;
+$blueColor: #1979ff;
 
-.selected-container{
-    display: flex;
-flex-wrap: wrap;
-margin-bottom: 20px;
-.user-selected{
+.no-item {
+  background-color: #f5f5f5;
+  color: #ddd;
+  height: 50px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.selected-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  .user-selected {
     width: 15%;
     padding: 0 15px;
     display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
-    figcaption{
-        color: #858585;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    figcaption {
+      color: #858585;
     }
-    div{
-        width:50px;
-        height: 50px;
+    div {
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      position: relative;
+      margin-bottom: 10px;
+      img {
+        width: 100%;
+        height: 100%;
         border-radius: 100%;
-        position: relative;
-        margin-bottom: 10px;
-        img{
-            width: 100%;
-            height: 100%;
-            border-radius: 100%;
+      }
+      span {
+        display: flex;
+        background-color: #fff;
+        border-radius: 100%;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        right: 0;
+        bottom: -3px;
+        align-items: center;
+        justify-content: center;
+        i {
+          color: $greenColor;
         }
-        span{
-            display: flex;
-            background-color: #fff;
-            border-radius: 100%;
-            width: 20px;
-            height: 20px;
-            position: absolute;
-            right: 0;
-            bottom: -3px;
-            align-items: center;
-            justify-content: center;
-            i{
-                color: $greenColor;
-               
-            }
-        }
-       
-      
+      }
     }
-}
-.selected-counter{
-    width:50px;
+  }
+  .selected-counter {
+    width: 50px;
     height: 50px;
     border-radius: 100%;
     color: $blueColor;
@@ -55,5 +61,5 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 }
