--- a/src/pages/createGroup.scss
+++ b/src/pages/createGroup.scss
@@ -67,3 +67,8 @@ cursor: pointer;
         color: #fff;
     }
 }
+@media screen and (max-width:767px){
+    .container{
+        width: 100%;
+    }
+}
