--- a/src/components/SelectedMembers/selectedMember.scss
+++ b/src/components/SelectedMembers/selectedMember.scss
@@ -1,5 +1,4 @@
-$greenColor: #4cad5b;
-$blueColor: #1979ff;
+@use "../../assets/variables" as v;
 
 .no-item {
   background-color: #f5f5f5;
@@ -25,26 +24,26 @@ $blueColor: #1979ff;
       color: #858585;
       text-align: center;
       overflow: hidden;
-text-overflow: ellipsis;
-width: 100%;
-white-space: nowrap;
-font-size: 14px;
+      text-overflow: ellipsis;
+      width: 100%;
+      white-space: nowrap;
+      font-size: 14px;
     }
     div {
       width: 50px;
       height: 50px;
-      border-radius: 100%;
+      @include v.circle;
       position: relative;
       margin-bottom: 10px;
       img {
         width: 100%;
         height: 100%;
-        border-radius: 100%;
+        @include v.circle;
       }
       span {
         display: flex;
         background-color: #fff;
-        border-radius: 100%;
+        @include v.circle;
         width: 20px;
         height: 20px;
         position: absolute;
@@ -53,7 +52,7 @@ font-size: 14px;
         align-items: center;
         justify-content: center;
         i {
-          color: $greenColor;
+          color: v.$color-green;
         }
       }
     }
@@ -61,9 +60,9 @@ font-size: 14px;
   .selected-counter {
     width: 50px;
     height: 50px;
-    border-radius: 100%;
-    color: $blueColor;
-    border: 2px solid $blueColor;
+    @include v.circle;
+    color: v.$color-blue;
+    border: 2px solid v.$color-blue;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,7 +75,8 @@ font-size: 14px;
         font-size: 13px;
       }
     }
-}}
+  }
+}
 @media screen and (max-width: 567px) {
   .selected-container {
     .user-selected {
@@ -98,5 +98,4 @@ font-size: 14px;
       height: 34px;
     }
   }
-  
 }
