--- a/src/components/SelectedMembers/selectedMember.css
+++ b/src/components/SelectedMembers/selectedMember.css
@@ -1,6 +1,6 @@
 .no-item {
-  background-color: #f5f5f5;
-  color: #ddd;
+  background-color: #f2f2f2;
+  color: #a6a6a6;
   height: 50px;
   border-radius: 5px;
   display: flex;
@@ -17,9 +17,9 @@
   width: 15%;
   padding: 0 5px;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 }
 .selected-container .user-selected figcaption {
   color: #858585;
@@ -64,7 +64,7 @@
   color: #1979ff;
   border: 2px solid #1979ff;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
