--- a/src/components/SelectedMembers/selectedMember.scss
+++ b/src/components/SelectedMembers/selectedMember.scss
@@ -1,8 +1,8 @@
 @use "../../assets/variables" as v;
 
 .no-item {
-  background-color: #f5f5f5;
-  color: #ddd;
+  background-color: #f2f2f2;
+  color: #a6a6a6;
   height: 50px;
   border-radius: 5px;
   display: flex;
@@ -16,10 +16,8 @@
   .user-selected {
     width: 15%;
     padding: 0 5px;
-    display: flex;
-    justify-content: center;
+    @include v.flex-center;
     flex-direction: column;
-    align-items: center;
     figcaption {
       color: #858585;
       text-align: center;
@@ -63,9 +61,7 @@
     @include v.circle;
     color: v.$color-blue;
     border: 2px solid v.$color-blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include v.flex-center;
   }
 }
 @media screen and (max-width: 991px) {
