--- a/src/components/UserFilter/userFilter.css
+++ b/src/components/UserFilter/userFilter.css
@@ -5,16 +5,16 @@
 .search-control label {
   top: -8px;
   left: 25px;
-  color: #505050;
+  color: #232323;
   position: absolute;
   font-size: 0.9rem;
   background-color: #fff;
   font-weight: bold;
 }
 .search-control input {
-  border: 1px solid #e9e9e9;
+  border: 1px solid #f2f2f2;
   padding: 0 15px 0 35px;
-  border-radius: 5px;
+  border-radius: 3px;
   width: 100%;
   height: 34px;
 }
@@ -22,7 +22,7 @@
   content: "\f002";
   font-family: "fontawesome";
   text-decoration: inherit;
-  color: #c6c6c6;
+  color: #a1a1a1;
   font-size: 19px;
   position: absolute;
   top: 6px;
