--- a/src/components/UserFilter/userFilter.scss
+++ b/src/components/UserFilter/userFilter.scss
@@ -1,34 +1,34 @@
-$blueColor:#1979ff;
-.search-control{
-    position: relative;
-    margin-bottom: 20px;
-    label{
-        top: -8px;
-        left: 25px;
-        color: #505050;
-        position: absolute;
-        font-size: 0.9rem;
-        background-color: #fff;
-        font-weight: bold;
-    }
-input{
-    border: 1px solid #e9e9e9;
+@use "../../assets/variables" as v;
+.search-control {
+  position: relative;
+  margin-bottom: 20px;
+  label {
+    top: -8px;
+    left: 25px;
+    color: v.$color-black;
+    position: absolute;
+    font-size: 0.9rem;
+    background-color: #fff;
+    font-weight: bold;
+  }
+  input {
+    border: 1px solid #f2f2f2;
     padding: 0 15px 0 35px;
-    border-radius: 5px;
+    @include v.rounded;
     width: 100%;
     height: 34px;
-}
-&::before{
+  }
+  &::before {
     content: "\f002";
-    font-family: 'fontawesome';
-text-decoration: inherit;
-color: #c6c6c6;
-font-size: 19px;
-position: absolute;
-top: 6px;
-left: 10px;
-}
-&:focus{
-    border-color:$blueColor ;
-}
+    font-family: "fontawesome";
+    text-decoration: inherit;
+    color: #a1a1a1;
+    font-size: 19px;
+    position: absolute;
+    top: 6px;
+    left: 10px;
+  }
+  &:focus {
+    border-color: v.$color-blue;
+  }
 }
