--- a/src/components/UserList/userList.scss
+++ b/src/components/UserList/userList.scss
@@ -1,84 +1,77 @@
-$greenColor:#4cad5b;
-$lightBlueColor:#e3eeff;
-$blueColor:#1979ff;
-$lightGreenColor:#ebfaf3;
-$grayColor:#dddddd;
-.user-list{
-    .user-container{
-        display: flex;
-        padding: 10px;
-        border-bottom: 2px dotted #f7f7f7;
-        justify-content: space-between;
-        align-items: center;
-       .user-info{
-display: flex;
-figcaption {
-padding-left: 15px;
-span{
-    display: block;
-    &:first-child{
-        color: #222222;
-        font-weight: bold;
-        margin: 5px 0;
-    }
-    &:last-child{
-        color: #222222;
-        color: #979797;
-    }
-}
-}
-.img-container{
-    width: 50px;
-    height: 50px;
-    border-radius: 3px;
-    position: relative;
-    img{
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-    }
-    .status{
-        position: absolute;
-        right: -6px;
-        bottom: -2px;
-        border: 2px solid #fff;
-        width: 15px;
-        height: 15px;
-        border-radius: 100%;
-    }
-    .online{
-        background-color:$greenColor;
-    }
-    .offline{
-        background-color: $grayColor;  
-    }
+@use "../../assets/variables" as v;
+.user-list {
+  .user-container {
+    @include v.flex-center;
+    padding: 10px;
+    border-bottom: 2px dotted #f6f6f6;
+    .user-info {
+      display: flex;
+      figcaption {
+        padding-left: 15px;
+        span {
+          display: block;
+          &:first-child {
+            color: v.$color-black;
+            font-weight: bold;
+            margin: 5px 0;
+          }
+          &:last-child {
+            color: #979797;
+          }
         }
+      }
+      .img-container {
+        width: 50px;
+        height: 50px;
+        @include v.rounded;
+        position: relative;
+        img {
+          width: 100%;
+          height: 100%;
+          @include v.rounded;
         }
-    
-        &:last-child{
-            border-bottom: none;
+        .status {
+          position: absolute;
+          right: -6px;
+          bottom: -2px;
+          border: 2px solid #fff;
+          width: 15px;
+          height: 15px;
+          border-radius: 100%;
         }
+        .online {
+          background-color: v.$color-green;
+        }
+        .offline {
+          background-color: #dddddd;
+        }
+      }
     }
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
 }
-.button{
-    width: 65px;
-    height: 25px;
-    text-align: center;
-    border-radius: 23px;
-    border: none;
-    cursor: pointer;
+.button {
+  width: 65px;
+  height: 25px;
+  text-align: center;
+  border-radius: 23px;
+  border: none;
+  cursor: pointer;
 }
-.btn-add{
-    @extend .button;
-background-color: $lightBlueColor;
-color: $blueColor;
+.btn-add {
+  @extend .button;
+  background-color: #e3eeff;
+  color: v.$color-blue;
 }
-.btn-added{
-    @extend .button;
-    background-color: $lightGreenColor;
-    color: $greenColor;
+.btn-added {
+  @extend .button;
+  background-color: #ebfaf3;
+  color: v.$color-green;
 }
-.add-user-icon{
-    width: 12px;
-    margin-right: 4px;
+.add-user-icon {
+  width: 12px;
+  margin-right: 4px;
 }
