--- a/src/pages/createGroup.scss
+++ b/src/pages/createGroup.scss
@@ -1,82 +1,84 @@
-$blueColor:#1979ff;
-$grayColor:#f2f2f2;
-$borderInputColor:#c6c6c6;
-.container{
-    width: 85%;
-    max-width: 100%;
-    margin: 0 auto;
-    padding:1rem;
+@use "../assets/variables" as v;
+
+.container {
+  width: 85%;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
 }
-.form-control{
-    position: relative;
-    margin-bottom: 20px;
-    label{
-        top: -8px;
-        left: 25px;
-        color: #505050;
-        position: absolute;
-        font-size: 0.9rem;
-        background-color: #fff;
-        font-weight: bold;
-    }
-input{
-    border: 1px solid $borderInputColor;
+.form-control {
+  position: relative;
+  margin-bottom: 20px;
+  label {
+    top: -8px;
+    left: 25px;
+    color: v.$color-black;
+    position: absolute;
+    font-size: 0.9rem;
+    background-color: #fff;
+    font-weight: bold;
+  }
+  input {
+    border: 1px solid #c6c6c6;
     padding: 0 15px;
-    border-radius: 5px;
+    @include v.rounded;
     width: 100%;
     height: 34px;
+  }
 }
+.form-control.invalid {
+  input {
+    border: 1px solid v.$color-red;
+  }
 }
-.form-control.invalid  {
-	input{
-        border: 1px solid #b40e0e;
-    }
+.text-danger {
+  color: v.$color-red;
 }
-.text-danger{
-    color: #b40e0e;
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  border-top: 2px solid #f2f2f2;
+  padding: 10px;
 }
-.button-container{
-    display: flex;
-   justify-content: flex-end;
-   border-top: 2px solid $grayColor;
-   padding: 10px;
+.btn {
+  width: 90px;
+  height: 34px;
+  padding: 0 15px;
+  text-align: center;
+  @include v.rounded;
+  margin: 0 0 10px 10px;
+  transition: 0.5s;
+  cursor: pointer;
 }
-.btn{
-width: 90px;
-height: 34px;
-padding: 0 15px;
-text-align: center;
-border-radius: 5px;
-margin: 0 0 10px 10px;
-transition: 0.5s;
-cursor: pointer;
+.btn-primary {
+  @extend .btn;
+  background-color: v.$color-blue;
+  color: #fff;
+  border: none;
+  &:hover,
+  &:focus {
+    background-color: #166fec;
+  }
+  &:disabled,
+  &:disabled:hover {
+    background-color: v.$color-blue;
+    cursor: default;
+    opacity: 0.5;
+  }
 }
-.btn-primary{
-    @extend .btn;
-    background-color: $blueColor;
+.btn-outline-primary {
+  @extend .btn;
+  color: v.$color-blue;
+  border: 2px solid v.$color-blue;
+  background-color: #fff;
+  &:hover,
+  &:focus {
+    background-color: v.$color-blue;
     color: #fff;
-    border: none;
-    &:hover,&:focus{
-        background-color: #166fec;
-    }
-    &:disabled,&:disabled:hover{
-        background-color: $blueColor;
-        cursor: default;
-        opacity: 0.5;
-    }
+  }
 }
-.btn-outline-primary{
-    @extend .btn;
-    color: $blueColor;
-    border: 2px solid $blueColor;
-    background-color: #fff;
-    &:hover,&:focus{
-        background-color: $blueColor;
-        color: #fff;
-    }
-}
-@media screen and (max-width:767px){
-    .container{
-        width: 100%;
-    }
+@media screen and (max-width: 767px) {
+  .container {
+    width: 100%;
+  }
 }
