--- a/src/components/SelectedMembers/selectedMember.scss
+++ b/src/components/SelectedMembers/selectedMember.scss
@@ -61,7 +61,9 @@
     @include v.circle;
     color: v.$color-blue;
     border: 2px solid v.$color-blue;
-    @include v.flex-center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 @media screen and (max-width: 991px) {
